--- a/front-end/src/styles/output.css
+++ b/front-end/src/styles/output.css
@@ -587,8 +587,8 @@
   .sticky {
     position: sticky;
   }
-  .sticky\! {
-    position: sticky !important;
+  .inset-y-0 {
+    inset-block: calc(var(--spacing) * 0);
   }
   .start-1 {
     inset-inline-start: calc(var(--spacing) * 1);
@@ -605,6 +605,12 @@
   .top-0 {
     top: calc(var(--spacing) * 0);
   }
+  .top-4 {
+    top: calc(var(--spacing) * 4);
+  }
+  .top-6 {
+    top: calc(var(--spacing) * 6);
+  }
   .top-10 {
     top: calc(var(--spacing) * 10);
   }
@@ -614,11 +620,20 @@
   .right-0 {
     right: calc(var(--spacing) * 0);
   }
+  .right-3 {
+    right: calc(var(--spacing) * 3);
+  }
   .bottom-0 {
     bottom: calc(var(--spacing) * 0);
   }
   .left-0 {
     left: calc(var(--spacing) * 0);
+  }
+  .left-4 {
+    left: calc(var(--spacing) * 4);
+  }
+  .left-6 {
+    left: calc(var(--spacing) * 6);
   }
   .left-10 {
     left: calc(var(--spacing) * 10);
@@ -794,8 +809,14 @@
   .mr-8 {
     margin-right: calc(var(--spacing) * 8);
   }
+  .-mb-96 {
+    margin-bottom: calc(var(--spacing) * -96);
+  }
   .mb-2 {
     margin-bottom: calc(var(--spacing) * 2);
+  }
+  .mb-24 {
+    margin-bottom: calc(var(--spacing) * 24);
   }
   .mb-auto {
     margin-bottom: auto;
@@ -832,9 +853,6 @@
   }
   .block {
     display: block;
-  }
-  .block\! {
-    display: block !important;
   }
   .contents {
     display: contents;
@@ -908,9 +926,25 @@
   .aspect-square {
     aspect-ratio: 1 / 1;
   }
+  .size-3 {
+    width: calc(var(--spacing) * 3);
+    height: calc(var(--spacing) * 3);
+  }
+  .size-4 {
+    width: calc(var(--spacing) * 4);
+    height: calc(var(--spacing) * 4);
+  }
+  .size-5 {
+    width: calc(var(--spacing) * 5);
+    height: calc(var(--spacing) * 5);
+  }
   .size-6 {
     width: calc(var(--spacing) * 6);
     height: calc(var(--spacing) * 6);
+  }
+  .size-8 {
+    width: calc(var(--spacing) * 8);
+    height: calc(var(--spacing) * 8);
   }
   .h-1 {
     height: calc(var(--spacing) * 1);
@@ -930,9 +964,6 @@
   .h-32 {
     height: calc(var(--spacing) * 32);
   }
-  .h-\[1px\] {
-    height: 1px;
-  }
   .h-auto {
     height: auto;
   }
@@ -941,9 +972,6 @@
   }
   .h-screen {
     height: 100vh;
-  }
-  .max-h-\[500px\] {
-    max-height: 500px;
   }
   .max-h-none {
     max-height: none;
@@ -963,11 +991,23 @@
   .w-1\/2 {
     width: calc(1/2 * 100%);
   }
+  .w-1\/3 {
+    width: calc(1/3 * 100%);
+  }
+  .w-2\/3 {
+    width: calc(2/3 * 100%);
+  }
+  .w-2\/5 {
+    width: calc(2/5 * 100%);
+  }
   .w-3 {
     width: calc(var(--spacing) * 3);
   }
-  .w-\[20\%\] {
-    width: 20%;
+  .w-3\/4 {
+    width: calc(3/4 * 100%);
+  }
+  .w-3\/5 {
+    width: calc(3/5 * 100%);
   }
   .w-full {
     width: 100%;
@@ -977,9 +1017,6 @@
   }
   .max-w-5xl {
     max-width: var(--container-5xl);
-  }
-  .max-w-\[500px\] {
-    max-width: 500px;
   }
   .max-w-md {
     max-width: var(--container-md);
@@ -1820,10 +1857,6 @@
     border-style: var(--tw-border-style);
     border-width: 0px;
   }
-  .border-\[1px\] {
-    border-style: var(--tw-border-style);
-    border-width: 1px;
-  }
   .border-x {
     border-inline-style: var(--tw-border-style);
     border-inline-width: 1px;
@@ -1894,9 +1927,6 @@
   }
   .bg-\[\#8E74D0\] {
     background-color: #8E74D0;
-  }
-  .bg-\[\#FB8E0B\] {
-    background-color: #FB8E0B;
   }
   .bg-amber-500 {
     background-color: var(--color-amber-500);
@@ -2178,9 +2208,6 @@
   .text-start {
     text-align: start;
   }
-  .align-\[alignment\] {
-    vertical-align: alignment;
-  }
   .align-baseline {
     vertical-align: baseline;
   }
@@ -2328,11 +2355,20 @@
   .whitespace-pre-wrap {
     white-space: pre-wrap;
   }
+  .text-\[\#8E74D0\] {
+    color: #8E74D0;
+  }
   .text-blue-500 {
     color: var(--color-blue-500);
   }
   .text-blue-600 {
     color: var(--color-blue-600);
+  }
+  .text-gray-300 {
+    color: var(--color-gray-300);
+  }
+  .text-gray-400 {
+    color: var(--color-gray-400);
   }
   .text-white {
     color: var(--color-white);
@@ -2818,48 +2854,6 @@
   .forced-color-adjust-none {
     forced-color-adjust: none;
   }
-  .\[a-zA-Z0-9\:\\\\-\\\\\._\$\] {
-    a-zA-Z0-9: \\-\\. $;
-  }
-  .\[a\:\(b\)\] {
-    a: (b);
-  }
-  .\[a\:b\] {
-    a: b;
-  }
-  .\[contenthash\:8\] {
-    contenthash: 8;
-  }
-  .\[emoji\:4\] {
-    emoji: 4;
-  }
-  .\[emoji\:\<length\>\] {
-    emoji: <length>;
-  }
-  .\[gh\:pidusage\] {
-    gh: pidusage;
-  }
-  .\[gh\:ps-tree-um\] {
-    gh: ps-tree-um;
-  }
-  .\[gh\:ps-tree\] {
-    gh: ps-tree;
-  }
-  .\[github\:simonepri\] {
-    github: simonepri;
-  }
-  .\[hash\:8\] {
-    hash: 8;
-  }
-  .\[hash\:base64\] {
-    hash: base64;
-  }
-  .\[k\:K\] {
-    k: K;
-  }
-  .\[key\:string\] {
-    key: string;
-  }
   .backface-hidden {
     backface-visibility: hidden;
   }
@@ -2967,19 +2961,15 @@
   .transform-view {
     transform-box: view-box;
   }
+  .\*\:font-semibold {
+    :is(& > *) {
+      --tw-font-weight: var(--font-weight-semibold);
+      font-weight: var(--font-weight-semibold);
+    }
+  }
   .peer-checked\:bg-\[\#8E74D0\] {
     &:is(:where(.peer):checked ~ *) {
       background-color: #8E74D0;
-    }
-  }
-  .peer-checked\:bg-blue-500 {
-    &:is(:where(.peer):checked ~ *) {
-      background-color: var(--color-blue-500);
-    }
-  }
-  .peer-checked\:bg-green-500 {
-    &:is(:where(.peer):checked ~ *) {
-      background-color: var(--color-green-500);
     }
   }
   .peer-checked\:text-white {
@@ -2994,13 +2984,6 @@
       }
     }
   }
-  .hover\:bg-\[\#db7e0d\] {
-    &:hover {
-      @media (hover: hover) {
-        background-color: #db7e0d;
-      }
-    }
-  }
   .focus\:ring {
     &:focus {
       --tw-ring-shadow: var(--tw-ring-inset,) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color, currentColor);
@@ -3012,30 +2995,40 @@
       --tw-ring-color: #8E74D0;
     }
   }
-  .focus\:ring-\[\#FB8E0B\] {
-    &:focus {
-      --tw-ring-color: #FB8E0B;
-    }
-  }
   .focus\:outline-none {
     &:focus {
       --tw-outline-style: none;
       outline-style: none;
     }
   }
-  .md\:flex {
-    @media (width >= 48rem) {
-      display: flex;
-    }
-  }
-  .md\:hidden {
-    @media (width >= 48rem) {
-      display: none;
-    }
-  }
   .md\:w-1\/2 {
     @media (width >= 48rem) {
       width: calc(1/2 * 100%);
+    }
+  }
+  .md\:w-1\/4 {
+    @media (width >= 48rem) {
+      width: calc(1/4 * 100%);
+    }
+  }
+  .md\:w-2\/3 {
+    @media (width >= 48rem) {
+      width: calc(2/3 * 100%);
+    }
+  }
+  .md\:w-2\/5 {
+    @media (width >= 48rem) {
+      width: calc(2/5 * 100%);
+    }
+  }
+  .md\:w-3\/4 {
+    @media (width >= 48rem) {
+      width: calc(3/4 * 100%);
+    }
+  }
+  .md\:w-3\/5 {
+    @media (width >= 48rem) {
+      width: calc(3/5 * 100%);
     }
   }
   .md\:grid-cols-4 {
@@ -3048,35 +3041,14 @@
       flex-direction: row;
     }
   }
-  .md\:items-center {
-    @media (width >= 48rem) {
-      align-items: center;
-    }
-  }
-  .md\:justify-center {
-    @media (width >= 48rem) {
-      justify-content: center;
-    }
-  }
-  .md\:border-\[1px\] {
-    @media (width >= 48rem) {
-      border-style: var(--tw-border-style);
-      border-width: 1px;
-    }
-  }
   .md\:border-gray-200 {
     @media (width >= 48rem) {
       border-color: var(--color-gray-200);
     }
   }
-  .md\:pl-8 {
+  .md\:bg-purple-100 {
     @media (width >= 48rem) {
-      padding-left: calc(var(--spacing) * 8);
-    }
-  }
-  .md\:pl-10 {
-    @media (width >= 48rem) {
-      padding-left: calc(var(--spacing) * 10);
+      background-color: var(--color-purple-100);
     }
   }
   .lg\:flex {
