--- a/front-end/src/styles/output.css
+++ b/front-end/src/styles/output.css
@@ -635,6 +635,9 @@
   .h-5 {
     height: calc(var(--spacing) * 5);
   }
+  .h-5\/6 {
+    height: calc(5/6 * 100%);
+  }
   .h-8 {
     height: calc(var(--spacing) * 8);
   }
