--- a/front-end/src/styles/output.css
+++ b/front-end/src/styles/output.css
@@ -1000,6 +1000,9 @@
   .h-1 {
     height: calc(var(--spacing) * 1);
   }
+  .h-1\/2 {
+    height: calc(1/2 * 100%);
+  }
   .h-2 {
     height: calc(var(--spacing) * 2);
   }
@@ -1036,6 +1039,9 @@
   .min-h-\[400px\] {
     min-height: 400px;
   }
+  .min-h-\[500px\] {
+    min-height: 500px;
+  }
   .min-h-screen {
     min-height: 100vh;
   }
@@ -1062,6 +1068,9 @@
   }
   .w-4 {
     width: calc(var(--spacing) * 4);
+  }
+  .w-4\/5 {
+    width: calc(4/5 * 100%);
   }
   .w-5 {
     width: calc(var(--spacing) * 5);
@@ -1668,6 +1677,9 @@
   .gap-24 {
     gap: calc(var(--spacing) * 24);
   }
+  .gap-32 {
+    gap: calc(var(--spacing) * 32);
+  }
   .space-y-reverse {
     :where(& > :not(:last-child)) {
       --tw-space-y-reverse: 1;
@@ -2017,17 +2029,41 @@
   .border-white {
     border-color: var(--color-white);
   }
+  .bg-\[\#7d68b1\] {
+    background-color: #7d68b1;
+  }
+  .bg-\[\#8370b4\] {
+    background-color: #8370b4;
+  }
+  .bg-\[\#8972c3\] {
+    background-color: #8972c3;
+  }
   .bg-\[\#8E74D0\] {
     background-color: #8E74D0;
   }
+  .bg-\[\#9881d1\] {
+    background-color: #9881d1;
+  }
   .bg-\[\#55477a\] {
     background-color: #55477a;
+  }
+  .bg-\[\#665592\] {
+    background-color: #665592;
+  }
+  .bg-\[\#ad9dd6\] {
+    background-color: #ad9dd6;
+  }
+  .bg-\[\#bbabe4\] {
+    background-color: #bbabe4;
   }
   .bg-\[\#ffffff\] {
     background-color: #ffffff;
   }
   .bg-amber-500 {
     background-color: var(--color-amber-500);
+  }
+  .bg-amber-700 {
+    background-color: var(--color-amber-700);
   }
   .bg-black {
     background-color: var(--color-black);
@@ -2285,6 +2321,12 @@
   .px-20 {
     padding-inline: calc(var(--spacing) * 20);
   }
+  .px-28 {
+    padding-inline: calc(var(--spacing) * 28);
+  }
+  .px-32 {
+    padding-inline: calc(var(--spacing) * 32);
+  }
   .py-1 {
     padding-block: calc(var(--spacing) * 1);
   }
@@ -2370,6 +2412,10 @@
   .text-3xl {
     font-size: var(--text-3xl);
     line-height: var(--tw-leading, var(--text-3xl--line-height));
+  }
+  .text-4xl {
+    font-size: var(--text-4xl);
+    line-height: var(--tw-leading, var(--text-4xl--line-height));
   }
   .text-6xl {
     font-size: var(--text-6xl);
@@ -2513,6 +2559,9 @@
   }
   .lowercase {
     text-transform: lowercase;
+  }
+  .lowercase\! {
+    text-transform: lowercase !important;
   }
   .normal-case {
     text-transform: none;
@@ -3218,6 +3267,26 @@
       width: calc(1/2 * 100%);
     }
   }
+  .md\:w-1\/3 {
+    @media (width >= 48rem) {
+      width: calc(1/3 * 100%);
+    }
+  }
+  .md\:w-1\/4 {
+    @media (width >= 48rem) {
+      width: calc(1/4 * 100%);
+    }
+  }
+  .md\:w-1\/5 {
+    @media (width >= 48rem) {
+      width: calc(1/5 * 100%);
+    }
+  }
+  .md\:w-2\/3 {
+    @media (width >= 48rem) {
+      width: calc(2/3 * 100%);
+    }
+  }
   .md\:w-2\/5 {
     @media (width >= 48rem) {
       width: calc(2/5 * 100%);
@@ -3243,6 +3312,26 @@
       border-color: var(--color-gray-200);
     }
   }
+  .md\:text-6xl {
+    @media (width >= 48rem) {
+      font-size: var(--text-6xl);
+      line-height: var(--tw-leading, var(--text-6xl--line-height));
+    }
+  }
+  .md\:shadow-lg {
+    @media (width >= 48rem) {
+      --tw-shadow: 0 10px 15px -3px var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 4px 6px -4px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
+      box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+    }
+  }
+  .md\:not-first\:shadow-lg {
+    @media (width >= 48rem) {
+      &:not(*:first-child) {
+        --tw-shadow: 0 10px 15px -3px var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 4px 6px -4px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
+        box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+      }
+    }
+  }
   .lg\:flex {
     @media (width >= 64rem) {
       display: flex;
@@ -3257,6 +3346,11 @@
   .lg\:w-1\/2 {
     @media (width >= 64rem) {
       width: calc(1/2 * 100%);
+    }
+  }
+  .lg\:w-3\/4 {
+    @media (width >= 64rem) {
+      width: calc(3/4 * 100%);
     }
   }
   .lg\:w-48 {
@@ -3278,6 +3372,18 @@
   .lg\:py-6 {
     @media (width >= 64rem) {
       padding-block: calc(var(--spacing) * 6);
+    }
+  }
+  .lg\:text-5xl {
+    @media (width >= 64rem) {
+      font-size: var(--text-5xl);
+      line-height: var(--tw-leading, var(--text-5xl--line-height));
+    }
+  }
+  .lg\:text-6xl {
+    @media (width >= 64rem) {
+      font-size: var(--text-6xl);
+      line-height: var(--tw-leading, var(--text-6xl--line-height));
     }
   }
   .lg\:text-lg {
