feat: finish teacher section

--- a/front-end/src/styles/output.css
+++ b/front-end/src/styles/output.css
@@ -530,6 +530,9 @@
   .pointer-events-none {
     pointer-events: none;
   }
+  .\!visible {
+    visibility: visible !important;
+  }
   .collapse {
     visibility: collapse;
   }
@@ -560,6 +563,9 @@
     clip: auto;
     white-space: normal;
   }
+  .\!fixed {
+    position: fixed !important;
+  }
   .\!relative {
     position: relative !important;
   }
@@ -578,6 +584,9 @@
   .sticky {
     position: sticky;
   }
+  .-inset-1 {
+    inset: calc(var(--spacing) * -1);
+  }
   .inset-y-0 {
     inset-block: calc(var(--spacing) * 0);
   }
@@ -587,8 +596,14 @@
   .end-1 {
     inset-inline-end: calc(var(--spacing) * 1);
   }
+  .end-2 {
+    inset-inline-end: calc(var(--spacing) * 2);
+  }
   .-top-6 {
     top: calc(var(--spacing) * -6);
+  }
+  .top-1 {
+    top: calc(var(--spacing) * 1);
   }
   .top-3 {
     top: calc(var(--spacing) * 3);
@@ -598,6 +613,21 @@
   }
   .top-10 {
     top: calc(var(--spacing) * 10);
+  }
+  .top-12 {
+    top: calc(var(--spacing) * 12);
+  }
+  .top-16 {
+    top: calc(var(--spacing) * 16);
+  }
+  .top-20 {
+    top: calc(var(--spacing) * 20);
+  }
+  .top-22 {
+    top: calc(var(--spacing) * 22);
+  }
+  .top-32 {
+    top: calc(var(--spacing) * 32);
   }
   .top-full {
     top: 100%;
@@ -622,6 +652,9 @@
   }
   .left-10 {
     left: calc(var(--spacing) * 10);
+  }
+  .left-12 {
+    left: calc(var(--spacing) * 12);
   }
   .isolate {
     isolation: isolate;
@@ -761,6 +794,9 @@
   .my-auto {
     margin-block: auto;
   }
+  .mt-1 {
+    margin-top: calc(var(--spacing) * 1);
+  }
   .mt-2 {
     margin-top: calc(var(--spacing) * 2);
   }
@@ -812,11 +848,17 @@
   .\!hidden {
     display: none !important;
   }
+  .\!inline {
+    display: inline !important;
+  }
   .\!table {
     display: table !important;
   }
   .block {
     display: block;
+  }
+  .contents {
+    display: contents;
   }
   .flex {
     display: flex;
@@ -909,8 +951,29 @@
   .h-2 {
     height: calc(var(--spacing) * 2);
   }
+  .h-4\/5 {
+    height: calc(4/5 * 100%);
+  }
+  .h-450 {
+    height: calc(var(--spacing) * 450);
+  }
+  .h-\[250px\] {
+    height: 250px;
+  }
+  .h-\[300px\] {
+    height: 300px;
+  }
+  .h-\[350px\] {
+    height: 350px;
+  }
+  .h-\[360px\] {
+    height: 360px;
+  }
   .h-\[400px\] {
     height: 400px;
+  }
+  .h-\[450px\] {
+    height: 450px;
   }
   .h-auto {
     height: auto;
@@ -923,6 +986,9 @@
   }
   .max-h-16 {
     max-height: calc(var(--spacing) * 16);
+  }
+  .max-h-40 {
+    max-height: calc(var(--spacing) * 40);
   }
   .max-h-none {
     max-height: none;
@@ -944,6 +1010,9 @@
   }
   .w-1\/3 {
     width: calc(1/3 * 100%);
+  }
+  .w-1\/5 {
+    width: calc(1/5 * 100%);
   }
   .w-2 {
     width: calc(var(--spacing) * 2);
@@ -981,8 +1050,35 @@
   .w-screen {
     width: 100vw;
   }
+  .max-w-1 {
+    max-width: calc(var(--spacing) * 1);
+  }
+  .max-w-1\/2 {
+    max-width: calc(1/2 * 100%);
+  }
+  .max-w-2 {
+    max-width: calc(var(--spacing) * 2);
+  }
+  .max-w-2\/3 {
+    max-width: calc(2/3 * 100%);
+  }
+  .max-w-3 {
+    max-width: calc(var(--spacing) * 3);
+  }
+  .max-w-4 {
+    max-width: calc(var(--spacing) * 4);
+  }
+  .max-w-4\/5 {
+    max-width: calc(4/5 * 100%);
+  }
   .max-w-5xl {
     max-width: var(--container-5xl);
+  }
+  .max-w-\[800px\] {
+    max-width: 800px;
+  }
+  .max-w-lg {
+    max-width: var(--container-lg);
   }
   .max-w-none {
     max-width: none;
@@ -992,6 +1088,12 @@
   }
   .max-w-screen {
     max-width: 100vw;
+  }
+  .max-w-xl {
+    max-width: var(--container-xl);
+  }
+  .min-w-150 {
+    min-width: calc(var(--spacing) * 150);
   }
   .min-w-screen {
     min-width: 100vw;
@@ -1364,6 +1466,9 @@
   .grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
+  .grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
   .grid-cols-none {
     grid-template-columns: none;
   }
@@ -1546,6 +1651,12 @@
   }
   .gap-20 {
     gap: calc(var(--spacing) * 20);
+  }
+  .gap-32 {
+    gap: calc(var(--spacing) * 32);
+  }
+  .gap-40 {
+    gap: calc(var(--spacing) * 40);
   }
   .space-y-reverse {
     :where(& > :not(:last-child)) {
@@ -1935,6 +2046,9 @@
   .bg-black {
     background-color: var(--color-black);
   }
+  .bg-blue-700 {
+    background-color: var(--color-blue-700);
+  }
   .bg-gray-100 {
     background-color: var(--color-gray-100);
   }
@@ -2158,6 +2272,12 @@
   .px-1 {
     padding-inline: calc(var(--spacing) * 1);
   }
+  .px-2 {
+    padding-inline: calc(var(--spacing) * 2);
+  }
+  .px-3 {
+    padding-inline: calc(var(--spacing) * 3);
+  }
   .px-4 {
     padding-inline: calc(var(--spacing) * 4);
   }
@@ -2191,8 +2311,26 @@
   .py-8 {
     padding-block: calc(var(--spacing) * 8);
   }
+  .py-12 {
+    padding-block: calc(var(--spacing) * 12);
+  }
+  .py-16 {
+    padding-block: calc(var(--spacing) * 16);
+  }
+  .py-18 {
+    padding-block: calc(var(--spacing) * 18);
+  }
+  .py-24 {
+    padding-block: calc(var(--spacing) * 24);
+  }
+  .pr-2 {
+    padding-right: calc(var(--spacing) * 2);
+  }
   .pr-101 {
     padding-right: calc(var(--spacing) * 101);
+  }
+  .pl-2 {
+    padding-left: calc(var(--spacing) * 2);
   }
   .text-center {
     text-align: center;
@@ -2382,8 +2520,20 @@
   .text-black {
     color: var(--color-black);
   }
+  .text-blue-500 {
+    color: var(--color-blue-500);
+  }
   .text-gray-400 {
     color: var(--color-gray-400);
+  }
+  .text-gray-600 {
+    color: var(--color-gray-600);
+  }
+  .text-gray-700 {
+    color: var(--color-gray-700);
+  }
+  .text-gray-800 {
+    color: var(--color-gray-800);
   }
   .text-white {
     color: var(--color-white);
@@ -2393,6 +2543,9 @@
   }
   .lowercase {
     text-transform: lowercase;
+  }
+  .lowercase\! {
+    text-transform: lowercase !important;
   }
   .normal-case {
     text-transform: none;
@@ -2886,8 +3039,11 @@
   .forced-color-adjust-none {
     forced-color-adjust: none;
   }
-  .\[k\:K\] {
-    k: K;
+  .\[contenthash\:8\] {
+    contenthash: 8;
+  }
+  .\[key\:string\] {
+    key: string;
   }
   .\[keywords\:node-addon-api\] {
     keywords: node-addon-api;
@@ -2999,6 +3155,11 @@
   .transform-view {
     transform-box: view-box;
   }
+  .\*\:overflow-y-auto {
+    :is(& > *) {
+      overflow-y: auto;
+    }
+  }
   .peer-checked\:bg-\[\#8E74D0\] {
     &:is(:where(.peer):checked ~ *) {
       background-color: #8E74D0;
@@ -3012,6 +3173,13 @@
   .odd\:bg-white {
     &:nth-child(odd) {
       background-color: var(--color-white);
+    }
+  }
+  .hover\:bg-\[\#7A5EB0\] {
+    &:hover {
+      @media (hover: hover) {
+        background-color: #7A5EB0;
+      }
     }
   }
   .hover\:bg-\[\#886fc7\] {
@@ -3032,6 +3200,13 @@
     &:hover {
       @media (hover: hover) {
         background-color: #efefef;
+      }
+    }
+  }
+  .hover\:bg-gray-300 {
+    &:hover {
+      @media (hover: hover) {
+        background-color: var(--color-gray-300);
       }
     }
   }
@@ -3083,6 +3258,12 @@
       box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
     }
   }
+  .focus\:ring-2 {
+    &:focus {
+      --tw-ring-shadow: var(--tw-ring-inset,) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color, currentColor);
+      box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+    }
+  }
   .focus\:ring-\[\#8E74D0\] {
     &:focus {
       --tw-ring-color: #8E74D0;
@@ -3094,14 +3275,36 @@
       outline-style: none;
     }
   }
+  .sm\:text-lg {
+    @media (width >= 40rem) {
+      font-size: var(--text-lg);
+      line-height: var(--tw-leading, var(--text-lg--line-height));
+    }
+  }
+  .sm\:text-sm {
+    @media (width >= 40rem) {
+      font-size: var(--text-sm);
+      line-height: var(--tw-leading, var(--text-sm--line-height));
+    }
+  }
   .md\:top-6 {
     @media (width >= 48rem) {
       top: calc(var(--spacing) * 6);
     }
   }
+  .md\:top-22 {
+    @media (width >= 48rem) {
+      top: calc(var(--spacing) * 22);
+    }
+  }
   .md\:left-6 {
     @media (width >= 48rem) {
       left: calc(var(--spacing) * 6);
+    }
+  }
+  .md\:left-12 {
+    @media (width >= 48rem) {
+      left: calc(var(--spacing) * 12);
     }
   }
   .md\:container {
@@ -3149,6 +3352,11 @@
       display: none;
     }
   }
+  .md\:h-\[450px\] {
+    @media (width >= 48rem) {
+      height: 450px;
+    }
+  }
   .md\:w-1\/2 {
     @media (width >= 48rem) {
       width: calc(1/2 * 100%);
@@ -3167,6 +3375,11 @@
   .md\:w-3\/4 {
     @media (width >= 48rem) {
       width: calc(3/4 * 100%);
+    }
+  }
+  .md\:max-w-4\/5 {
+    @media (width >= 48rem) {
+      max-width: calc(4/5 * 100%);
     }
   }
   .md\:grid-cols-4 {
@@ -3204,6 +3417,27 @@
       padding: calc(var(--spacing) * 12);
     }
   }
+  .md\:py-6 {
+    @media (width >= 48rem) {
+      padding-block: calc(var(--spacing) * 6);
+    }
+  }
+  .md\:py-8 {
+    @media (width >= 48rem) {
+      padding-block: calc(var(--spacing) * 8);
+    }
+  }
+  .md\:py-12 {
+    @media (width >= 48rem) {
+      padding-block: calc(var(--spacing) * 12);
+    }
+  }
+  .md\:text-2xl {
+    @media (width >= 48rem) {
+      font-size: var(--text-2xl);
+      line-height: var(--tw-leading, var(--text-2xl--line-height));
+    }
+  }
   .md\:text-5xl {
     @media (width >= 48rem) {
       font-size: var(--text-5xl);
@@ -3225,6 +3459,21 @@
   .md\:text-black {
     @media (width >= 48rem) {
       color: var(--color-black);
+    }
+  }
+  .md\:text-gray-600 {
+    @media (width >= 48rem) {
+      color: var(--color-gray-600);
+    }
+  }
+  .md\:text-gray-700 {
+    @media (width >= 48rem) {
+      color: var(--color-gray-700);
+    }
+  }
+  .md\:text-gray-800 {
+    @media (width >= 48rem) {
+      color: var(--color-gray-800);
     }
   }
   .md\:shadow-lg {
@@ -3257,6 +3506,21 @@
   .lg\:w-48 {
     @media (width >= 64rem) {
       width: calc(var(--spacing) * 48);
+    }
+  }
+  .lg\:max-w-1\/2 {
+    @media (width >= 64rem) {
+      max-width: calc(1/2 * 100%);
+    }
+  }
+  .lg\:max-w-2\/3 {
+    @media (width >= 64rem) {
+      max-width: calc(2/3 * 100%);
+    }
+  }
+  .lg\:max-w-3\/4 {
+    @media (width >= 64rem) {
+      max-width: calc(3/4 * 100%);
     }
   }
   .lg\:max-w-\[900px\] {
